feat: Add comprehensive settings page with profile, account, notifications, appearance, and security sections

--- a/client/index.html
+++ b/client/index.html
@@ -5,14 +5,17 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>theCortex</title>
+    <link rel="preconnect" href="https://fonts.cdnfonts.com" />
     <link rel="stylesheet" href="/src/styles/fonts.css">
     <style>
       body {
         margin: 0;
         padding: 0;
-        font-family: 'Metropolis', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, sans-serif;
+        font-family: 'Metropolis', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, 'Helvetica Neue', Arial, sans-serif;
         background-color: #1C1C1C;
         color: white;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
       }
       #root {
         min-height: 100vh;
