Update .gitignore and production configuration

--- a/client/index.html
+++ b/client/index.html
@@ -4,7 +4,13 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>theCortex</title>
+    <meta name="theme-color" content="#3b82f6">
+    <meta name="description" content="A modern web application for content management">
+    <link rel="manifest" href="/manifest.json">
+    <link rel="icon" type="image/png" sizes="192x192" href="/assets/logo-192.png">
+    <link rel="icon" type="image/png" sizes="512x512" href="/assets/logo-512.png">
+    <link rel="apple-touch-icon" href="/assets/logo-192.png">
+    <title>Cortex</title>
     <link rel="preconnect" href="https://fonts.cdnfonts.com" />
     <link rel="stylesheet" href="/src/styles/fonts.css">
     <style>
@@ -49,5 +55,11 @@
       </div>
     </div>
     <script type="module" src="/src/main.jsx"></script>
+    <noscript>
+      <div style="text-align: center; padding: 2rem;">
+        <h1>JavaScript Required</h1>
+        <p>This application requires JavaScript to be enabled in your browser.</p>
+      </div>
+    </noscript>
   </body>
 </html> 
